Properly displayed data in ListView

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">PersonalTrainer</string>
     <string name="action_settings">Settings</string>
+    <string name="last_exercice">Last exercice: </string>
+    <string name="day">Day: </string>
+    <string name="test_result">Test result: </string>
 </resources>
