Added screen with details after choosing specific exercise

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="last_exercice">Last exercice: </string>
     <string name="day">Day: </string>
     <string name="test_result">Test result: </string>
+    <string name="repetitions_to_make">Repetitions to make</string>
+    <string name="series_done">Series done:</string>
+    <string name="done">Done</string>
 </resources>
